# todos-flask-htmx-picocss

./: .gitignore  README.md  assets.py  package-lock.json  package.json  pyproject.toml
todos/: app.py  todo.py
todos/templates/: index.html
todos/templates/_partials/: todo.html
